@@ -30,21 +30,23 @@ public class ChatService {
         List<ChatMessage> history = chatHistoryRepository.getMessages(request.sessionId());
 
         if (history.isEmpty()){
-            ChatPersonality personality = request.personality() != null
-                    ? request.personality()
-                    : ChatPersonality.DEFAULT;
-            history.add(new ChatMessage("system", personality.getSystemPrompt()));
+            ChatPersonality personality = request.personality() != null ? request.personality() : ChatPersonality.DEFAULT;
+            ChatMessage systemMessage = new ChatMessage("system", personality.getSystemPrompt());
+
+            chatHistoryRepository.addMessage(request.sessionId(), systemMessage);
+            history.add(systemMessage);
         }
 
-        history.add(new ChatMessage("user", request.message()));
+        ChatMessage userMessage = new ChatMessage("user", request.message());
+        chatHistoryRepository.addMessage(request.sessionId(), userMessage);
+        history.add(userMessage);
 
         ChatCompletionRequest aiRequest = new ChatCompletionRequest(modelName, history);
-
         ChatCompletionResponse aiResponse = aiClientService.getCompletion(aiRequest);
 
-        String aiMessage = aiResponse.choices().get(0).message().content();
+        String aiMessage = aiResponse.choices().getFirst().message().content();
 
-        history.add(new ChatMessage("assistant", aiMessage));
+        chatHistoryRepository.addMessage(request.sessionId(), new ChatMessage("assistant", aiMessage));
 
         return new ChatResponseDTO(aiMessage, request.sessionId());
     }
